--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+<!--    custom color-->
+    <color name="main">#AB7FDD</color>
+    <color name="main_2">#E1CCEC</color>
+
 </resources>
