--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="253dp"
         android:fontFamily="@font/inter_bold"
         android:inputType="number"
+        android:importantForAutofill="no"
         android:itemBackground="@drawable/bg_otp_item"
         android:textColor="@android:color/white"
         app:OtpItemCount="6"
