--- a/app/src/main/res/drawable/kotak.xml
+++ b/app/src/main/res/drawable/kotak.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:padding="10dp">
-
-<!-- android:width="510px"-->
-
-    <size android:height="40dp" />
+    <size
+        android:width="225dp"
+        android:height="215dp"
+        />
     <!-- you can use any color you want I used here gray color-->
     <solid android:color="@color/main_2"/>
-    <corners android:radius="7dp"/>
+    <corners android:radius="15dp"/>
 </shape>
