--- a/app/src/main/res/layout/activity_inp_hp.xml
+++ b/app/src/main/res/layout/activity_inp_hp.xml
@@ -65,13 +65,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btn_masukdua"
+        android:id="@+id/btn_masuknomor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="304dp"
         android:background="@drawable/rounded_btn"
         android:fontFamily="@font/inter_bold"
         android:text="Masuk"
+
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
