tambah & update beberapa Activity,
- fix bug label nyanggeyeng di Activity Login
- fix ukuran foto profil kegedean
- pindahin Button ke Fragment masing-masing
- fix masalah fragment di Beranda tea

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".HomeActivity">
 
     <Button
@@ -33,6 +33,7 @@
         android:id="@+id/MASUK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="156dp"
         android:layout_marginBottom="75dp"
         android:fontFamily="@font/inter_extrabold"
         android:text="MASUK"
@@ -40,14 +41,14 @@
         android:textSize="37sp"
         app:layout_constraintBottom_toTopOf="@+id/inp_NIS"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<!--    fixme:textview nya mabok-->
+    <!--    fixme:textview nya mabok-->
     <TextView
         android:id="@+id/lbl_NIK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="102dp"
         android:layout_marginEnd="254dp"
         android:layout_marginBottom="7dp"
         android:fontFamily="@font/inter_regular"
@@ -56,51 +57,48 @@
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/inp_NIS"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
-<!--    fixme: textview nya mabok juga-->
+    <!--    fixme: textview nya mabok juga-->
     <TextView
-
         android:id="@+id/lbl_sandi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="102dp"
-        android:layout_marginEnd="228dp"
+        android:layout_marginEnd="245dp"
         android:layout_marginBottom="6dp"
         android:fontFamily="@font/inter_regular"
         android:text="Kata Sandi"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/inp_sandi"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/inp_sandi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="300dp"
-        android:background="@drawable/rounded_btn"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:paddingLeft="20px"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
     <EditText
         android:id="@+id/inp_NIS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="408dp"
+        android:layout_marginBottom="43dp"
         android:background="@drawable/rounded_btn"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="20px"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/lbl_sandi"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <EditText
+        android:id="@+id/inp_sandi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/rounded_btn"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:paddingLeft="20px"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
@@ -117,5 +115,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="100dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
