Memperbaiki Keamanan Page | Menampilkan Data Pemesanan Nebeng

--- a/app/src/main/res/layout/activity_nebeng_m.xml
+++ b/app/src/main/res/layout/activity_nebeng_m.xml
@@ -1,108 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NebengM">
+    tools:context=".NebengActivity">
 
-    <ScrollView
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:fillViewport="true"-->
+<!--        android:padding="15dp">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
+
+<!--&lt;!&ndash;            disini&ndash;&gt;-->
+<!--&lt;!&ndash;            <androidx.core.widget.NestedScrollView&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                >&ndash;&gt;-->
+<!--&lt;!&ndash;                <RelativeLayout&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:id="@+id/satu"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_width="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                    android:background="@drawable/nebengcard">&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    <RelativeLayout&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:id="@+id/kiri"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_centerVertical="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:paddingStart="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:paddingEnd="10dp">&ndash;&gt;-->
+
+
+<!--&lt;!&ndash;                        <ImageView&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:id="@+id/gambar"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_centerHorizontal="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_centerVertical="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:src="@drawable/profil_view_nebeng" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    </RelativeLayout>&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    <RelativeLayout&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:id="@+id/kanan"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_centerVertical="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginStart="15dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginTop="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_toRightOf="@id/kiri">&ndash;&gt;-->
+
+
+<!--&lt;!&ndash;                        <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:id="@+id/alamat"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:fontFamily="@font/inter_bold"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:text="SDN Dahniar"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textColor="@color/black"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textSize="14sp" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                        <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:id="@+id/harga"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_below="@id/alamat"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:fontFamily="@font/inter_bold"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:text="Rp 14000"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textColor="@color/black"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textSize="14sp" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                        <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:id="@+id/nama"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_below="@id/harga"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_marginTop="10dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:fontFamily="@font/inter_regular"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:text="Asep"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textSize="11sp" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                        <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:id="@+id/titikjemput"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:layout_below="@id/nama"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:fontFamily="@font/inter_regular"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:text="Gerbang Sekolah"&ndash;&gt;-->
+<!--&lt;!&ndash;                            android:textSize="9sp" />&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    </RelativeLayout>&ndash;&gt;-->
+
+<!--&lt;!&ndash;                    <Button&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:id="@+id/NebengProceed"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_alignParentEnd="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_centerVertical="true"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_marginEnd="35dp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:text="Nebeng"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:textAllCaps="false" />&ndash;&gt;-->
+<!--&lt;!&ndash;                </RelativeLayout>&ndash;&gt;-->
+<!--&lt;!&ndash;            </androidx.core.widget.NestedScrollView>&ndash;&gt;-->
+<!--        </LinearLayout>-->
+<!--    </ScrollView>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:padding="15dp">
+        android:layout_margin="10px"
+        tools:listitem="@layout/list_template"
+        android:orientation="vertical" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:id="@+id/satu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/nebengcard">
-
-                <RelativeLayout
-                    android:id="@+id/kiri"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp">
-
-
-                    <ImageView
-                        android:id="@+id/gambar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/profil_view_nebeng" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/kanan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_toRightOf="@id/kiri">
-
-
-                    <TextView
-                        android:id="@+id/alamat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/inter_bold"
-                        android:text="SDN Dahniar"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/harga"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/alamat"
-                        android:fontFamily="@font/inter_bold"
-                        android:text="Rp 14000"
-                        android:textColor="@color/black"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/nami"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/harga"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/inter_regular"
-                        android:text="Asep"
-                        android:textSize="11sp" />
-
-                    <TextView
-                        android:id="@+id/titiktemu"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/nami"
-                        android:fontFamily="@font/inter_regular"
-                        android:text="Gerbang Sekolah"
-                        android:textSize="9sp" />
-
-                </RelativeLayout>
-
-                <Button
-                    android:id="@+id/NebengProceed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="35dp"
-                    android:text="Nebeng"
-                    android:textAllCaps="false" />
-            </RelativeLayout>
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
